--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "tsc",
-    "lint": "run-s lint:ts lint:eslint lint:prettier",
+    "lint": "run-s lint:ts lint:eslint",
     "lint:ts": "tsc --noEmit",
     "lint:eslint": "eslint '**/*.{js,ts}'",
     "lint:prettier": "prettier '**/*.{js,ts,json,yaml,md}'",
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "npm run lint:eslint -- --fix",
-    "fix:prettier": "npm run lint:prettier -- --write",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -37,9 +36,8 @@
   "devDependencies": {
     "@types/eslint": "^7.2.8",
     "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "eslint": "^7.23.0",
+    "eslint": "^8.45.0",
+    "eslint-config-cnp": "^0.0.3",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
@@ -48,12 +46,11 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^5.0.1"
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "lint --fix",
-      "prettier --write"
+      "eslint --fix"
     ],
     "*.{json,yaml,md}": [
       "prettier --write"
