--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin-xxxx",
+  "name": "eslint-plugin-xxx",
   "version": "1.0.0",
   "description": "",
   "engines": {
@@ -23,12 +23,11 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "release": "semantic-release",
     "add-rule": "ts-node scripts/add-rule",
     "update": "ts-node scripts/update"
   },
   "peerDependencies": {
-    "eslint": ">=5.16.0"
+    "eslint": ">=8.45.0"
   },
   "dependencies": {
     "@typescript-eslint/experimental-utils": "^4.20.0"
@@ -36,9 +35,10 @@
   "devDependencies": {
     "@types/eslint": "^7.2.8",
     "@types/jest": "^26.0.22",
+    "changesets": "^1.0.2",
     "eslint": "^8.45.0",
     "eslint-config-cnp": "^0.0.3",
-    "husky": "^6.0.0",
+    "husky": "^8.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
@@ -46,7 +46,7 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
-    "typescript": "^5.0.1"
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "*.{js,ts}": [
