--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,8 +16,9 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: npm ci
+
       - name: Test
-        run: npm test:coverage
+        run: npm run test:coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
