--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "add-rule": "ts-node scripts/add-rule",
-    "update": "ts-node scripts/update"
+    "update": "ts-node scripts/update",
+    "release": "changeset publish"
   },
   "peerDependencies": {
     "eslint": ">=8.45.0"
   },
   "dependencies": {
-    "@typescript-eslint/experimental-utils": "^4.20.0"
+    "@typescript-eslint/utils": "^5.62.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
