--- a/package.json
+++ b/package.json
@@ -14,11 +14,9 @@
     "clean": "rimraf dist",
     "prebuild": "npm run clean",
     "build": "tsc",
-    "lint": "run-s lint:ts lint:eslint",
+    "lint": "npm run lint:eslint",
     "lint:ts": "tsc --noEmit",
     "lint:eslint": "eslint '**/*.{js,ts}'",
-    "lint:prettier": "prettier '**/*.{js,ts,json,yaml,md}'",
-    "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "npm run lint:eslint -- --fix",
     "test": "jest",
     "test:watch": "jest --watch",
